--- a/force-app/main/default/classes/AdyenReturn.cls
+++ b/force-app/main/default/classes/AdyenReturn.cls
@@ -10,8 +10,7 @@ public with sharing class AdyenReturn {
         Map<String, String> additionalData = (Map<String, String>)paymentResult.get('additionalData');
         String responseMerchantReference = !String.isBlank((String)additionalData.get('merchantReference')) ? (String)additionalData.get('merchantReference') : (String)paymentResult.get('merchantReference');
         Boolean isMyWallet = responseMerchantReference.contains('addStoredMethod');
-        //TODOBAS add Payment Failed error message
-        PageReference pageReference = isMyWallet ? new PageReference(Site.getBaseSecureUrl() + '/ccrz__MyAccount?viewState=myWallet?paymentFailed=true') : new PageReference(Site.getBaseSecureUrl() + '/ccrz__CheckoutNew?paymentFailed=true?cartID=' + merchantReference);
+        PageReference pageReference = isMyWallet ? new PageReference(Site.getBaseSecureUrl() + '/ccrz__MyAccount?viewState=myWallet?AuthorisationFailed=true') : new PageReference(Site.getBaseSecureUrl() + '/ccrz__CheckoutNew?AuthorisationFailed=true?cartID=' + merchantReference);
         if (paymentResult.get('resultCode') == PaymentsResponse.ResultCodeEnum.AUTHORISED) {
             if(merchantReference == responseMerchantReference || isMyWallet){
                 pageReference = new PageReference(Site.getBaseSecureUrl() + '/ccrz__MyAccount?viewState=myWallet');
