--- a/force-app/main/default/classes/Util.cls
+++ b/force-app/main/default/classes/Util.cls
@@ -4,9 +4,9 @@ public inherited sharing class Util {
 
     public static Merchant__mdt getConfigByName(String configName) {
         Merchant__mdt[] configs = [
-                SELECT Client_Key__c, Merchant_Account__c, ApplicationInfo_SI__c, Live__c, QualifiedApiName
+                SELECT Client_Key__c, Merchant_Account__c, ApplicationInfo_SI__c, Live__c, AdyenMerchantConfig__c, QualifiedApiName
                 FROM Merchant__mdt
-                WHERE DeveloperName = :configName
+                WHERE AdyenMerchantConfig__c = :configName
                 LIMIT 1
         ];
         if (configs <> null && configs.size() == 1) {
