--- a/force-app/main/default/classes/Mocks.cls
+++ b/force-app/main/default/classes/Mocks.cls
@@ -1,17 +1,8 @@
 //
-// Contains mock structures for testing the Adyen interface.
+// Contains mock structures for testing the Adyen endpoints.
 public class Mocks {
-    public static String mockPaymentsResponse() {
-        System.debug('Start Mock');
-        String paymentsResponseAuthorised = '{ "additionalData": { "cardSummary": "1111", "expiryDate": "3/2030", "cardHolderName": "John Smith", "paymentMethod": "visa", }, "pspReference": "8826268577445660", "resultCode": "Authorised" }';
-//        PaymentsResponse paymentsResponse = (PaymentsResponse) JSON.deserialize(Util.makeSalesforceCompatible(paymentsResponseAuthorised), PaymentsResponse.class);
-//        System.debug('paymentsResponse = ' + paymentsResponse);
-//        Map<String, Object> paymentResult = AdyenResponseHandler.handleResponse(paymentsResponse);
-//        System.debug('paymentResult = ' + paymentResult);
-//        Map<String, Object> adyenResult = new Map<String, Object>();
-//        adyenResult.put('paymentResult', paymentResult);
-//        System.debug('adyenResult = ' + adyenResult);
-        return paymentsResponseAuthorised;
+    public static String mockPaymentsResponseSuccess() {
+        return '{ "additionalData": { "cardSummary": "1111", "expiryDate": "3/2030", "cardHolderName": "John Smith", "paymentMethod": "visa" }, "pspReference": "8xxxxxxxxx", "resultCode": "Authorised" }';
     }
 
     public class AdyenPaymentsSuccessMock implements HttpCalloutMock {
@@ -21,7 +12,7 @@ public class Mocks {
             // Create a fake response
             HttpResponse res = new HttpResponse();
             res.setHeader('Content-Type', 'text/json');
-            res.setBody(JSON.serialize(mockPaymentsResponse()));
+            res.setBody(JSON.serialize(mockPaymentsResponseSuccess()));
             res.setStatusCode(200);
             return res;
         }
